test/sematest/invalid/invalid_condition.java
class A {
  public static void main(String[] args) {
    if (4){
      System.out.println(3);
    }
  }
}